syntax = "proto3";

package rpc.service;
option go_package = "/rpc/service";

message SearchCakeRequest {
  string name = 1;
  int64 page = 2;
  int64 page_size = 3;
  int64 user_id = 4;
}

message SearchCake {
  int64 id = 1;
  string name = 2;
  string description = 3;
  int64 price = 4;
  string image_url = 5;
  uint64 user_id = 6;
}

message SearchCakeResponse {
  repeated SearchCake cakes = 1;
}

message CreateCakeRequest {
  string name = 1;
  string description = 2;
  int64 price = 3;
  string image_url = 4;
  uint64 user_id = 5;
}

message GetCakeByIdRequest {
  int64 id = 1;
}

message GetCakeByIdResponse {
  int64 id = 1;
  string name = 2;
  string description = 3;
  int64 price = 4;
  string image_url = 5;
  uint64 user_id = 6;
}
