syntax = "proto3";

package rpc.service;
option go_package = "/rpc/service";

import "rpc/service/cake.proto";
import "rpc/service/user.proto";


service Service {
  rpc CreateCake(CreateCakeRequest) returns (Cake);
  rpc GetCakeById(GetCakeByIdRequest) returns (GetCakeByIdResponse);
  rpc SearchCake(SearchCakeRequest) returns (SearchCakeResponse);
  rpc UpdateCake(Cake) returns (Cake);
  rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse);
}
